fixed the navbar layout issues by adding a <p> element around the links of "account" and "login / logout" Also added a button to the show page so taht you can go back to the index as you please

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -2,8 +2,13 @@
 body {
   color: $light-gray
 }
+.gyms-link {
+  margin-top: 10px;
+  margin-left: 15px;
+
+}
 .show-header {
-  padding-top: 20px;
+  padding-top: 10px;
   margin: 0 auto;
   p {
     padding-left: 5px;
